--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <base href="/">
 </head>
-<body>
 
+<body>
+    <hd-navbar></hd-navbar>
+    <ui-router></ui-router>
 </body>
+
 </html>
