--- a/WebSite/src/WebSite/index.html
+++ b/WebSite/src/WebSite/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="app">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -11,7 +11,7 @@
 
 <body>
     <hd-navbar></hd-navbar>
-    <ui-view></ui-view>
+    <ui-router></ui-router>
 
     <script src="vendor/jquery/dist/jquery.min.js"></script>
     <script src="vendor/bootstrap/dist/js/bootstrap.min.js"></script>
