--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css">
 </head>
 
-<body>
+<body n>
     <hd-navbar></hd-navbar>
     <ui-view></ui-view>
 
