--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <base href="/">
-    <link rel="stylesheet" href="app.css">
     <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="app.css">
 </head>
 
 <body>
     <hd-navbar></hd-navbar>
-    <ui-view></ui-view>
+    <ui-view class="hd-view"></ui-view>
 
     <script src="vendor/jquery/dist/jquery.min.js"></script>
     <script src="vendor/bootstrap/dist/js/bootstrap.min.js"></script>
