--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -7,19 +7,24 @@
     <base href="/">
     <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="app.css">
+
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet"/>
+    <link href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.min.css" rel="stylesheet"/>
 </head>
 
 <body>
-    <hd-navbar></hd-navbar>
-    <ui-view class="hd-view"></ui-view>
+<hd-navbar></hd-navbar>
+<ui-view class="hd-view"></ui-view>
 
-    <script src="vendor/jquery/dist/jquery.min.js"></script>
-    <script src="vendor/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="vendor/angular/angular.min.js"></script>
-    <script src="vendor/angular-ui-router/release/angular-ui-router.min.js"></script>
-    <script src="vendor/d3/d3.min.js"></script>
+<script src="vendor/jquery/dist/jquery.min.js"></script>
+<script src="vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="vendor/angular/angular.min.js"></script>
+<script src="vendor/angular-ui-router/release/angular-ui-router.min.js"></script>
+<script src="vendor/d3/d3.min.js"></script>
 
-    <script src="bundle.js"></script>
+<script src="bundle.js"></script>
+
 </body>
 
 </html>
